--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE> 
 <html>  
     <head>
         <title>Cat's Rule</title>
@@ -16,7 +16,7 @@
                 <li>A group of kittens is called a kindle.</li>
                 <li></li>
             </ul>
-            <img src="/Users/andrea/Desktop/IMG_1439.jpeg" alt="black and brown cats faces next to each other" />
+            <img src="https://media.istockphoto.com/id/1058510144/photo/cats-sitting-in-a-row.jpg?s=612x612&w=0&k=20&c=mA0-E6BQzPl9eN4e-c9gXTmJdGjf-AOQcVu1_Y7jAyc=" alt="several cats of differents ages and breeds" />
         </section>
         <section>
             <h3>Gross Dog Facts</h3>
@@ -32,9 +32,12 @@
     </main>
 <footer>
     <nav>
-       
+        <ul>
+            <li><a href="https://cvillecatcare.com/veterinary-topics/101-amazing-cat-facts-fun-trivia-about-your-feline-friend/">"101 Cat Facts"</a></ul>
+            <li><a href="https://www.rescuedogs101.com/101-dog-facts/"> "101 Dog Fatcs(if you really care)</a></li>
+            <li><a href="https://www.aspca.org/"> "Adopt a Furry Friend</a></li>
+        </ul>
     </nav>
-
 </footer>
     
 </body>
