--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
     </main>
 <footer>
     <nav>
+        <h2>Learn More Below</h2>
         <ul>
             <li><a href="https://cvillecatcare.com/veterinary-topics/101-amazing-cat-facts-fun-trivia-about-your-feline-friend/">"101 Cat Facts"</a></ul>
-            <li><a href="https://www.rescuedogs101.com/101-dog-facts/"> "101 Dog Fatcs(if you really care)</a></li>
-            <li><a href="https://www.aspca.org/"> "Adopt a Furry Friend</a></li>
+            <li><a href="https://www.rescuedogs101.com/101-dog-facts/"> "101 Dog Facts(if you really care)"</a></li>
+            <li><a href="https://www.aspca.org/"> "Adopt a Furry Friend"</a></li>
         </ul>
     </nav>
 </footer>
