--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li>Male cats are more likely to be left-pawed, while female cats are more likely to be right-pawed.</li>
                 <li>A group of kittens is called a kindle.</li>
-                <li></li>
+                <li>A cat’s purr vibrates at a frequency of 25 to 150 hertz, which is the same frequency at which muscles and bones repair themselves.</li>
             </ul>
             <img src="https://media.istockphoto.com/id/1058510144/photo/cats-sitting-in-a-row.jpg?s=612x612&w=0&k=20&c=mA0-E6BQzPl9eN4e-c9gXTmJdGjf-AOQcVu1_Y7jAyc=" alt="several cats of differents ages and breeds" />
         </section>
@@ -33,7 +33,7 @@
     <nav>
         <h2>Learn More Below</h2>
         <ul>
-            <li><a href="https://cvillecatcare.com/veterinary-topics/101-amazing-cat-facts-fun-trivia-about-your-feline-friend/">"101 Cat Facts"</a></ul>
+            <li><a href="https://cvillecatcare.com/veterinary-topics/101-amazing-cat-facts-fun-trivia-about-your-feline-friend/"> "101 Cat Facts"</a></ul>
             <li><a href="https://www.rescuedogs101.com/101-dog-facts/"> "101 Dog Facts(if you really care)"</a></li>
             <li><a href="https://www.aspca.org/"> "Adopt a Furry Friend"</a></li>
         </ul>
