--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <li>Male cats are more likely to be left-pawed, while female cats are more likely to be right-pawed.</li>
                 <li>A group of kittens is called a kindle.</li>
-                <li>A cat’s purr vibrates at a frequency of 25 to 150 hertz, which is the same frequency at which muscles and bones repair themselves.</li>
+                <li>A cats purr vibrates at a frequency of 25 to 150 hertz, which is the same frequency at which muscles and bones repair themselves.</li>
             </ul>
             </section>
         <img 
