--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
     <head>
         <title>Cats Rule</title>
         <link rel="stylesheet" href="style.css">
+        <script src="script.js"></script>
     </head>
     <body>
         <header>
+            <script>greeting();</script>
             <h1>Cats Rule, Dogs Drool</h1>
             <h2>...all over your stuff.</h2>
+            <script>catLoverOrNot();</script>
         </header>
-        <script src="script.js"></script>
         <main>
-            <section>
+            <section></section>
             <h3>Cool Cat Facts</h3>
             <ul>
                 <li>Male cats are more likely to be left-pawed, while female cats are more likely to be right-pawed.</li>
